This is my first commit -  I changeds in it

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,12 +9,12 @@
     <h1>Write text here.</h1>
 	<form>
 		<p ><label></label></p>
-		<textarea class="mej"  type="text" rows="4" cols="50" id="input" for="input"></textarea>
+		<textarea class="on"  type="text" rows="4" cols="50" id="input" for="input"></textarea>
 		<br>
 	  </form>
         <button id="myClick" class="click" onclick="myClick()"> Click </button>
 		<br>
-        <button id="guyn" class="guyn" onclick="rand()">Button Here</button>
+        <button id="color" class="color" onclick="rand()">Button Here</button>
 		<p class="output" id = "output" for="output"></p>
 </body>
 </html>
